# STM32F429-Rust-Sandbox

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
