[package]
name = "embedded"
version = "0.1.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
anyhow = { version = "1.0", default-features = false }

[dependencies.cortex-m-rt]
version = "0.6.12"
features = ["device"]


[dependencies.stm32f4]
version = "0.11.0"
features = ["stm32f429", "rt"]

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f429"] # replace the model of your microcontroller here


# stm32f407g-disc = "0.4.0"
# cortex-m = "0.6"
# cortex-m-rt = "0.6"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
# panic-halt = "0.2"
# aux5 = { path = "auxiliary" }

# libtock = {git = "https://github.com/tock/libtock-rs"}
