[package]
name = "embedded"
version = "0.1.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
anyhow = { version = "1.0", default-features = false }
usb-device = "0.2.5"
usbd-serial = "0.1.0"
nb = "1"

[dependencies.cortex-m-rt]
version = "0.6.12"
features = ["device"]


[dependencies.stm32f4]
version = "0.11.0"
features = ["stm32f429", "rt"]

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f429", "usb_fs"] # replace the model of your microcontroller here




# defmt-related stuff
[features]
default = [
  "defmt-default",
#   "dependency-a/defmt-trace",
]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []


[dependencies.defmt]
git = "https://github.com/knurling-rs/defmt"
branch = "main"

[dependencies.defmt-rtt]
git = "https://github.com/knurling-rs/defmt"
branch = "main"


[profile.dev]
codegen-units = 1
debug = 1
debug-assertions = true # <-
incremental = false
lto = 'fat'
opt-level = 'z' # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
